test/samples/invalid/resolving/struct_margs_mismatch.maruir
struct Foo<M;T> {
	field: T[] *M;
}

fun foo(arg: Foo<#memory, #storage; uint8>) {
}
